playground/notas_tests/invalid/r1-01.hulk
let a=2, b=3, a=2 in a+b;
